// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.journal.v1.shared.server;

service SharedJournal {
    // Store some continuous entries to a segment.
    rpc Store(StoreRequest) returns (StoreResponse);

    // Read some entries from a segment.
    rpc Read(ReadRequest) returns (stream Entry);
}

message StoreRequest {
    uint64 stream_id = 1;
    uint32 seg_epoch = 2;

    // The epoch of writer.
    uint32 epoch = 3;
    // The sequence already acked.
    uint64 acked_seq = 4;

    uint32 first_index = 5;

    repeated bytes events = 6;
}

message StoreResponse {}

message ReadRequest {
    uint64 stream_id = 1;
    uint32 seg_epoch = 2;

    uint32 start_index = 3;
    uint32 length = 4;
}

enum EntryType {
    HOLE = 0;
    EVENT = 1;
}

message Entry {
    EntryType entry_type = 1;
    uint32 epoch = 2;
    bytes event = 3;
}
